@startuml

title __MODELS's Class Diagram__\n

  package umcarro.Models {
    class Cliente {
        {static} - serialVersionUID : long
        - cordX : Double
        - cordY : Double
        + Cliente()
        + getCordX()
        + setCordX()
        + getCordY()
        + setCordY()
        + toString()
    }
  }
  

  package umcarro.Models {
    class Pedido {
        {static} - serialVersionUID : long
        - id : Integer
        - nifCliente : Integer
        - nifProprietario : Integer
        - cordXDest : Double
        - cordYDest : Double
        - matricula : String
        - preferencia : String
        - pendente : Boolean
        - porClassificar : Boolean
        - precoViagem : Double
        + Pedido()
        + Pedido()
        + getId()
        + setId()
        + getMatricula()
        + setMatricula()
        + getNifCliente()
        + setNifCliente()
        + getNifProprietario()
        + setNifProprietario()
        + getCordXDest()
        + setCordXDest()
        + getCordYDest()
        + setCordYDest()
        + getPreferencia()
        + setPreferencia()
        + getPendente()
        + setPendente()
        + getPorClassificar()
        + setPorClassificar()
        + getPrecoViagem()
        + setPrecoViagem()
        + toString()
    }
  }
  

  package umcarro.Models {
    class Proprietario {
        {static} - serialVersionUID : long
        - veiculos : HashMap<String, Veiculo>
        - pedidosArray : ArrayList<Pedidos>
        + Proprietario()
        + getVeiculos()
        + setVeiculos()
        + getPedidosArray()
        + setPedidosArray()
        + setVeiculo()
        + toString()
    }
  }
  

  package umcarro.Models {
    class Utilizador {
        {static} - serialVersionUID : long
        - nome : String
        - nif : Integer
        - username : String
        - morada : String
        - dataNasc : Date
        - password : String
        - rating : Double
        - ratingCounter : Integer
        + Utilizador()
        + Utilizador()
        + addRating()
        + getUsername()
        + setUsername()
        + getNome()
        + setNome()
        + getDataNasc()
        + setDataNasc()
        + getPassword()
        + setPassword()
        + getMorada()
        + setMorada()
        + getNif()
        + setNif()
        + getRating()
        + setRating()
        + getRatingCounter()
        + setRatingCounter()
        + validaPassword()
        + toString()
    }
  }
  

  package umcarro.Models {
    class Veiculo {
        {static} - serialVersionUID : long
        - tipo : String
        - marca : String
        - matricula : String
        - nif : Integer
        - velocidadeMedia : Integer
        - precoPorKm : Double
        - consumoPorKm : Double
        - autonomia : Double
        - cordX : Double
        - cordY : Double
        - rating : Double
        + Veiculo()
        + Veiculo()
        + getTipo()
        + setTipo()
        + getMarca()
        + setMarca()
        + getMatricula()
        + setMatricula()
        + getNif()
        + setNif()
        + getVelocidadeMedia()
        + setVelocidadeMedia()
        + getPrecoPorKm()
        + setPrecoPorKm()
        + getConsumoPorKm()
        + setConsumoPorKm()
        + getAutonomia()
        + setAutonomia()
        + getCordX()
        + setCordX()
        + getCordY()
        + setCordY()
        + getRating()
        + setRating()
        + toString()
    }
  }
  

  Cliente -up-|> Serializable
  Cliente -up-|> Utilizador
  Pedido -up-|> Serializable
  Proprietario -up-|> Serializable
  Proprietario -up-|> Utilizador
  Utilizador -up-|> Serializable
  Veiculo -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
